--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
         <item>16</item>
         <item>17</item>
         <item>18</item>
-    </string-array>>
+    </string-array>
+    >
 </resources>
